--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -4,7 +4,7 @@
   "main.menu.home": "الرئيسية",
   "main.menu.name": "علي بابا",
   "main.menu.about": "عنا",
-  "main.menu.products": "productsAR",
+  "main.menu.products": "منتجات",
   "main.menu.contact": "اتصل بنا",
   "main.menu.setting": "الاعدادات",
   "main.menu.auth": "authAR",
