--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -7,7 +7,7 @@
   "save": "Save",
   "edit": "Edit",
   "main.menu.home": "Home",
-  "main.menu.products": "products",
+  "main.menu.products": "Products",
   "main.menu.about": "About",
   "main.menu.examples": "Examples",
   "main.menu.auth": "auth",
