--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -7,7 +7,7 @@
   "save": "Save_F",
   "edit": "Edit_F",
   "main.menu.home": "HomeF",
-  "main.menu.products": "productsF",
+  "main.menu.products": "ProductsF",
   "main.menu.about": "AboutF",
   "main.menu.examples": "ExamplesF",
   "main.menu.auth": "authF",
