--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -127,7 +127,7 @@
   "user.confirm_password": "تأكيد الرقم السري",
   "user.username": "أسم المستخدم",
   "user.name": "الأسم",
-  "user.profile": "الحساب الشخصي",
+  "user.profile": "profileF",
   "user.location": "العنوان",
   "user.website": "الموقع الشخصي",
   "user.update_profile": "تحديث الملف الشخصي",
