--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -111,7 +111,7 @@
   "user.confirm_password": "تأكيد الرقم السري",
   "user.username": "أسم المستخدم",
   "user.name": "الأسم",
-  "user.profile": "الحساب الشخصي",
+  "user.profile": "Profile",
   "user.location": "العنوان",
   "user.website": "الموقع الشخصي",
   "user.update_profile": "تحديث الملف الشخصي",
