--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -7,6 +7,7 @@
   "main.menu.products": "منتجات",
   "main.menu.contact": "اتصل بنا",
   "main.menu.setting": "الاعدادات",
+  "main.menu.dashboard": "DashboardA",
   "main.menu.auth": "authAR",
   "main.menu.login": "تسجيل الدخول",
   "main.menu.logout": "تسجيل الخروج",
