--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -76,10 +76,10 @@
   "anms.setting.animations.title": "Animations",
   "anms.setting.general.language.en": "English",
   "anms.setting.general.language.fr": "French",
-  "anms.setting.themes.blue": "Blue",
-  "anms.setting.themes.dark": "Dark",
-  "anms.setting.themes.light": "Light",
-  "anms.setting.themes.nature": "Nature",
+  "anms.setting.themes.Blue": "BlueA",
+  "anms.setting.themes.Dark": "DarkA",
+  "anms.setting.themes.Light": "LightA",
+  "anms.setting.themes.Nature": "NatureA",
   "anms.setting.themes.night-mode": "Auto night mode (from 21:00 to 7:00)",
   "anms.setting.themes.placeholder": "Color Theme",
   "anms.setting.themes.saneago": "",
