--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -67,10 +67,10 @@
   "anms.setting.general.language.ar": "Arabic",
   "anms.setting.general.placeholder": "Language",
   "anms.setting.general.title": "General",
-  "anms.setting.themes.blue": "Blue",
-  "anms.setting.themes.dark": "Dark",
-  "anms.setting.themes.light": "Light",
-  "anms.setting.themes.nature": "Nature",
+  "anms.setting.themes.Blue": "Blue",
+  "anms.setting.themes.Dark": "Dark",
+  "anms.setting.themes.Light": "Light",
+  "anms.setting.themes.Nature": "Nature",
   "anms.setting.themes.night-mode": "Auto night mode (from 21:00 to 7:00)",
   "anms.setting.themes.placeholder": "Color Theme",
   "anms.setting.themes.saneago": "",
