--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -83,10 +83,10 @@
   "anms.setting.general.language.ar": "Arabic",
   "anms.setting.general.placeholder": "Langue",
   "anms.setting.general.title": "Généraux",
-  "anms.setting.themes.blue": "Bleu",
-  "anms.setting.themes.dark": "Sombre",
-  "anms.setting.themes.light": "Clair",
-  "anms.setting.themes.nature": "Nature",
+  "anms.setting.themes.BlueF": "Blue",
+  "anms.setting.themes.DarkF": "Dark",
+  "anms.setting.themes.LightF": "Light",
+  "anms.setting.themes.NatureF": "Nature",
   "anms.setting.themes.night-mode": "Mode nuit automatique (de 21h00 à 7h00)",
   "anms.setting.themes.placeholder": "Thème de couleur",
   "anms.setting.themes.saneago": "",
